@@ -7,6 +7,9 @@
 	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
 	- disable file contexts into package metadata during build.
 	- fix: "/path/foo.../bar" was losing a dot (#123844).
+	- lua embedded in rpmio.
+	- use lua to identify desired selinux file context regexes.
+	- add 'requires' and 'conflicts' tag aliases.
 
 4.3 -> 4.3.1:
 	- fix: don't add leading space to %* argv expansion (#119059).
